<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="@color/color_default"
    tools:context=".ui.auth.RecoverAccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_default">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_back">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_recover_account"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center_horizontal"
                    />

            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_email"
                android:textColor="@color/white"
                android:textSize="18sp"
                />

            <EditText
                android:id="@+id/recoverEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit"
                android:inputType="textEmailAddress"
                android:hint="@string/text_email_hint"
                android:padding="14dp"
                android:textSize="14sp"
                />

            <Button
                android:id="@+id/btnRecover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_button"
                app:backgroundTint="@null"
                android:text="@string/text_btn_recover_account_fragment"
                android:textAllCaps="false"
                android:textColor="@color/color_default"
                android:textSize="18sp"
                />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                tools:visibility="visible"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:indeterminateTint="@color/white"
                />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>