<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Otimizar códigos do aplicativo para deixar o aplicativo mais rápido"
                />

            <TextView
                android:id="@+id/btn_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_task"
                android:backgroundTint="@color/color_delete"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="6dp"
                android:text="@string/btn_remove"
                app:layout_constraintBottom_toBottomOf="@+id/btn_edit"
                app:layout_constraintEnd_toStartOf="@+id/btn_edit"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_edit"
                />

            <TextView
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_task"
                android:backgroundTint="@color/color_edit"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="6dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="24dp"
                android:text="@string/btn_edit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_details"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_remove"
                app:layout_constraintTop_toBottomOf="@+id/textDescription"
                />

            <TextView
                android:id="@+id/btn_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_task"
                android:backgroundTint="@color/color_details"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="6dp"
                android:text="@string/btn_details"
                app:layout_constraintBottom_toBottomOf="@+id/btn_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_edit"
                app:layout_constraintTop_toTopOf="@+id/btn_edit"
                />

            <ImageButton
                android:id="@+id/ibBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="@+id/btn_edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_edit"
                tools:tint="@color/color_default"
                />

            <ImageButton
                android:id="@+id/ibNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_next"
                app:layout_constraintBottom_toBottomOf="@+id/btn_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_edit"
                tools:tint="@color/color_default"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>